[gd_scene load_steps=24 format=3 uid="uid://rnjcf0y4dsgm"]

[ext_resource type="Script" uid="uid://0pf84kqbgh2v" path="res://lib/PlayerControls/player_controls.gd" id="1_3mnar"]
[ext_resource type="FontFile" uid="uid://bgn10o8bm34q6" path="res://imports/fonts/ArgulaRegular/Arugula20250312-Regular.ttf" id="2_76wlr"]
[ext_resource type="Script" uid="uid://dtox1eect8j31" path="res://lib/PlayerControls/player_controls_skin.gd" id="2_w4hr5"]
[ext_resource type="ColorPalette" uid="uid://c25vynta3epcj" path="res://lib/Colors/all_gray.tres" id="2_x4854"]
[ext_resource type="Texture2D" uid="uid://buvdvm0v1gqb7" path="res://imports/icons/treasure-map-line_240px.png" id="3_vcta7"]
[ext_resource type="Texture2D" uid="uid://3fiaiv5vq0s1" path="res://imports/icons/run-line_240px.png" id="3_y3xte"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4854"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6lbv"]
bg_color = Color(0.18, 0.18, 0.18, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ou1op"]
bg_color = Color(0.212, 0.212, 0.212, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncw1t"]
bg_color = Color(0.13, 0.13, 0.13, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fg561"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia7xe"]
bg_color = Color(0.18, 0.18, 0.18, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4iule"]
bg_color = Color(0.212, 0.212, 0.212, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_motgb"]
bg_color = Color(0.13, 0.13, 0.13, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1timf"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wl0bj"]
bg_color = Color(0.18, 0.18, 0.18, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rf3py"]
bg_color = Color(0.212, 0.212, 0.212, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5a8o6"]
bg_color = Color(0.13, 0.13, 0.13, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxkj2"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w004m"]
bg_color = Color(0.18, 0.18, 0.18, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ajcq"]
bg_color = Color(0.212, 0.212, 0.212, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xe3or"]
bg_color = Color(0.13, 0.13, 0.13, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="GDScript" id="GDScript_3mnar"]
resource_name = "debug"
script/source = "extends Node


func _on_player_controls_action_east() -> void:
    print(\"E\")


func _on_player_controls_action_north() -> void:
    print(\"N\")


func _on_player_controls_action_south() -> void:
    print(\"S\")


func _on_player_controls_action_west() -> void:
    print(\"W\")
"

[node name="PlayerControls" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3mnar")

[node name="PlayerControlsSkin" type="Control" parent="." node_paths=PackedStringArray("button_palette_order")]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_w4hr5")
palette = ExtResource("2_x4854")
button_palette_order = [NodePath("../Control/VBoxContainer/HBoxContainer/BtnNorth"), NodePath("../Control/VBoxContainer/HBoxContainer2/BtnSouth"), NodePath("../Control/VBoxContainer/HBoxContainer/BtnEast"), NodePath("../Control/VBoxContainer/HBoxContainer2/BtnWest")]

[node name="Control" type="Control" parent="."]
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 212.0
offset_bottom = 212.0
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BtnNorth" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_x4854")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d6lbv")
theme_override_styles/hover = SubResource("StyleBoxFlat_ou1op")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ncw1t")

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer/BtnNorth"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 86.0
offset_bottom = 86.0
rotation = -0.785398
pivot_offset = Vector2(38, 38)
texture = ExtResource("3_y3xte")
expand_mode = 1

[node name="BtnEast" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fg561")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ia7xe")
theme_override_styles/hover = SubResource("StyleBoxFlat_4iule")
theme_override_styles/disabled = SubResource("StyleBoxFlat_motgb")

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/BtnEast"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_right = 25.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_76wlr")
theme_override_font_sizes/font_size = 76
text = "↗"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BtnWest" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1timf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wl0bj")
theme_override_styles/hover = SubResource("StyleBoxFlat_rf3py")
theme_override_styles/disabled = SubResource("StyleBoxFlat_5a8o6")

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2/BtnWest"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -96.0
offset_right = 48.0
grow_horizontal = 2
grow_vertical = 0
rotation = 3.14159
pivot_offset = Vector2(48, 48)
theme_override_fonts/font = ExtResource("2_76wlr")
theme_override_font_sizes/font_size = 76
text = "↗"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnSouth" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jxkj2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w004m")
theme_override_styles/hover = SubResource("StyleBoxFlat_5ajcq")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xe3or")

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer2/BtnSouth"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 86.0
offset_bottom = 86.0
rotation = -0.785398
pivot_offset = Vector2(38, 38)
texture = ExtResource("3_vcta7")
expand_mode = 1

[node name="debug" type="Node" parent="."]
script = SubResource("GDScript_3mnar")
